2005-03-08 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: removed examples\14bit\*.inc
	* cli/cmd_manager.h: added newline at the end of file
	* doc/gpsimWin32.html: atk upgraded to 1.8.0

2005-03-08 Scott Dattalo <scott@dattalo.com>
	* regression/ccp/ccp.asm: improvements to ccp regression test
	* gui/gui_profile.cc, gui/gui_trace.cc, gui/gui_statusbar.cc,
	src/value.cc: Temporarily removed windows-specific macro.
	* src/stimulus.cc, src/stimuli.h: Cleaned up asynchronous stimuli
	* src/registers.h, src/ssp.cc, src/ioports.cc, src/14bit-tmrs.cc:
	Made the default register class access functions all go through
	one function to obtain a register's value.

2005-02-26 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/trace.h, src/breakpoints.h, src/symbol.h,
	src/gpsim_interface.h, src/gpsim_time.h:
	The external references demarcated by 'IN_MODULE' were not getting
	resolved in FC3. Since these were introduced to resolve a linking
	problem with WIN32 DLL's, I made the demarcation dependent on only
	Windows. 

2005-02-25 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc: Added methods to the IOPIN class
	to differentiate between a pin driving a node and one being driven
	by a node.
	* src/14bit-tmrs.cc, src/i2c-ee.cc, src/packages.cc, src/ssp.cc,
	src/stimuli.cc, src/stimuli.h, src/uart.cc, extras/lcd/lcd.cc,
	gui/gui_breadboard.cc, modules/logic.cc, modules/logic.h,
	modules/usart.cc, modules/video.cc, modules/video.h: Propogate
	IOPIN change to all consumers.

2005-02-24 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc: Added impedance thresholds
	to differentiate strong, weak, and floating drivers.

2005-02-16 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc: experiments in ioport redesign.

2005-02-16 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc: Added 'getBitChar()' method to
	the open collector stimulus class.

2005-02-15 Scott Dattalo <scott@dattalo.com>