@@ -32,7 +32,6 @@ Boston, MA 02111-1307, USA.  */
 #include "protocol.h"
 #include "../config.h"
 
-#define PRINTF_INT64_MODIFIER "L"
 //------------------------------------------------------------------------
 Value::Value()
   : cpDescription(0), xref(0)
